testsuite/tests/rename/should_fail/T19843f.stderr

T19843f.hs:8:12: error:
    Not in scope: ‘mup’
    Perhaps you meant ‘mop’ (line 5)
